# UARTPro

./: .gitignore  AGENT_INTEGRATION.md  BroomIcon.qml  CLAUDE.md  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  CyberButton.qml  CyberCheckBox.qml  CyberComboBox.qml  CyberTextField.qml  EyeIcon.qml  FileLogger.cpp  FileLogger.h  HeadlessRunner.cpp  HeadlessRunner.h  QMLDesign.md  SerialPortManager.cpp  SerialPortManager.h  TerminalModel.cpp  TerminalModel.h  build.bat  copy.bat  deploy.bat  design-spec-filter-highlight-v2.json  main.cpp  main.qml  ux-refactor-spec.json  version.h
docs/superpowers/plans/: 2026-06-11-core-refactor-agent-cli.md
